Adjust style based on screen width

--- a/toc-do-toi-da.html
+++ b/toc-do-toi-da.html
@@ -221,6 +221,18 @@
                 box-shadow: none !important;
             }
         }
+
+        @media (min-width: 768px) {
+            body {
+                padding: 16px 10%;
+            }
+        }
+
+        @media (min-width: 1280px) {
+            body {
+                padding: 16px 30%;
+            }
+        }
     </style>
 </head>
 <body>
