Update print css

--- a/toc-do-toi-da.html
+++ b/toc-do-toi-da.html
@@ -215,6 +215,7 @@
         @media print {
             body {
                 background: white;
+                padding: 0 !important;
             }
 
             * {
